Many small code changes following recommendations from FindBugs